k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-aug
  labels:
    name: chat-aug
