k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-aug-service
  labels:
    app: chat-aug-backend
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: chat-aug-backend
